--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,6 @@
 # Example .env.local file for MySQL Database credentials
 
-APP_URL=http://127.0.0.1:3000
+APP_URL=http://localhost:3000
 MYSQL_HOST=127.0.0.1
 MYSQL_DATABASE=next_js
 MYSQL_USERNAME=root
