--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^0.3.1",
     "next": "latest",
+    "next-pwa": "^5.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "serverless-mysql": "^1.5.4"
