--- a/.env.local.example
+++ b/.env.local.example
@@ -2,6 +2,6 @@
 
 APP_URL=http://localhost:3000
 MYSQL_HOST=127.0.0.1
-MYSQL_DATABASE=next_js
+MYSQL_DATABASE=alamat_ctp
 MYSQL_USERNAME=root
 MYSQL_PASSWORD=
