--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
     "type-check": "tsc"
   },
   "dependencies": {
@@ -17,11 +19,17 @@
     "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.2.5",
+    "babel-jest": "^26.6.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "postcss": "^8.2.8",
+    "react-test-renderer": "^17.0.1",
     "tailwindcss": "^2.0.3",
     "typescript": "4.0"
   },
