--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-jest": "^26.6.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "msw": "^0.27.1",
     "postcss": "^8.2.8",
     "react-test-renderer": "^17.0.1",
     "tailwindcss": "^2.0.3",
