--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Alamat CTP | Tselkalimantan",
-  "short_name": "Alamat CTP",
+  "name": "Lokasi Ganti 4G | Telkomsel Kalimantan",
+  "short_name": "Lokasi Ganti 4G",
   "theme_color": "#ed1c24",
   "background_color": "#ffffff",
   "display": "minimal-ui",
